[AB-94] adding command to show the state of a server poll